# agent-eval-gate

./: .gitignore  EVIDENCE_B.md  README.md  SPEC_GAP.md  config.example.yaml  pyproject.toml  run_output.txt
src/agent_eval_gate/: __init__.py  __main__.py  config.py  gate.py  lineage.py  llm_client.py  protocols.py  run.py  task_set.py
src/agent_eval_gate/baseline/: __init__.py  braintrust_baseline.py  drift_attribution.py
src/agent_eval_gate/export/: __init__.py  inspect_ai_adapter.py  langfuse_tracing.py  langsmith_tracing.py  phoenix_tracing.py
src/agent_eval_gate/judge/: __init__.py  cross_vendor_guard.py  exact_match.py  geval_judge.py  pairwise_rank.py
src/agent_eval_gate/suts/: __init__.py  adk.py  anthropic.py  base.py  claude_agent_sdk.py  crewai.py  langchain.py  maf.py  openai_sdk.py  pydantic_ai.py  react_loop.py  smolagents.py  strands.py
tests/: test_core.py
