[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval-gate"
version = "0.1.0"
description = "Cross-framework agent regression gate with cross-vendor LLM-as-judge"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "deepeval>=2.0",
    "braintrust>=0.1",
    "litellm>=1.0",
    "tiktoken>=0.7",
    # SUT frameworks — pin conservatively; update if APIs shift
    "openai-agents>=0.0.1",
    "pydantic-ai>=0.0.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "crewai>=0.100.0",
    "smolagents>=0.1.0",
    # Optional / may fail on Windows
    # "google-adk>=0.1.0",
    # "strands-agents>=0.1.0",
    # "autogen-agentchat>=0.4.0",
    # "inspect-ai>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
all = [
    "google-adk>=0.1.0",
    "strands-agents>=0.1.0",
    "autogen-agentchat>=0.4.0",
    "inspect-ai>=0.4.0",
]

[project.scripts]
agent-eval-gate = "agent_eval_gate.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
